@@ -1,4 +1,5 @@
 EXTRA_DIST = dolfin_mf.h \
+             ConvectionMatrix.h \
              LoadVector.h \
              MassMatrix.h \
              MatrixFactory.h \
